--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==2.3.2
-Flask-Cors==3.0.10
 uvicorn==0.22.0
-fastapi[standard]
-jinja2==3.0.3
+fastapi[standard]==0.115.6
+python-multipart==0.0.6
+Jinja2==3.1.2
