--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -2,7 +2,6 @@
 FROM python:3.12-slim
 
 # Set environment variables
-# 禁止 Python 写入 pyc 文件到磁盘，设置 Python 的输出为非缓冲模式
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
@@ -29,16 +28,15 @@ RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.d
 ARG REPO_URL=https://github.com/Evanchan1923/say66_dev
 ARG BRANCH=main
 RUN git clone --branch $BRANCH $REPO_URL /app && \
-    cd /app && git lfs pull
+    cd /app && git fetch --all && git reset --hard origin/$BRANCH && git lfs pull
 
 # Install Python dependencies
 COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy static and templates folders
 COPY static /app/static
 COPY templates /app/templates
-
-RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose the port the FastAPI app will run on
 EXPOSE 5000
