--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Build Docker image
-      run: docker build -t evan-app .
+      run: docker build  -f Dockerfile_dev -t evan-app .
 
     - name: Deploy to Azure VM
       run: |
