--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure VM
 on:
   push:
     branches:
-      - main  # Trigger deployment on changes to the main branch
+      - main
 
 jobs:
   deploy:
@@ -11,19 +11,23 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2  # Pull the latest code
+      uses: actions/checkout@v2
 
     - name: Set up Docker
-      uses: docker/setup-buildx-action@v2  # Prepare Docker environment
+      uses: docker/setup-buildx-action@v2
 
     - name: Build Docker image
       run: docker build -f Dockerfile_dev -t evan-app .
 
     - name: Set up SSH key
       run: |
-        mkdir -p ~/.ssh  # Ensure .ssh directory exists
+        mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519.pem
-        chmod 600 ~/.ssh/id_ed25519.pem  # Set correct permissions for the key
+        chmod 600 ~/.ssh/id_ed25519.pem
+
+    - name: Add Host Key
+      run: |
+        ssh-keyscan -H 20.55.25.167 >> ~/.ssh/known_hosts
 
     - name: Deploy to Azure VM
       run: |
