--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         ls -l ~/.ssh  # 列出 .ssh 目录
         cat ~/.ssh/id_ed25519.pem  # 检查私钥内容（可选，仅用于调试）
-        ssh-keygen -y -f ~/.ssh/id_ed25519.pem  # 提取公钥，检查是否匹配
+        ssh-keygen -y -f ~/.ssh/id_ed25519.pem  # 提取公钥，检查是否匹配 123
 
     - name: Add Host Key
       run: |
