--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,9 @@ jobs:
 
     - name: Set up SSH key
       run: |
-        mkdir -p ~/.ssh  # 创建 .ssh 目录
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519.pem  # 写入私钥
-        chmod 600 ~/.ssh/id_ed25519.pem  # 设置权限
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519.pem
+        chmod 600 ~/.ssh/id_ed25519.pem
 
     - name: Debug SSH key
       run: |
