--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519.pem
         chmod 600 ~/.ssh/id_ed25519.pem
-        
+
         # 验证私钥是否正确生成
         ls -l ~/.ssh
         ssh-keygen -y -f ~/.ssh/id_ed25519.pem || echo "Failed to load private key"
@@ -35,8 +35,8 @@ jobs:
 
     - name: Deploy to Azure VM
       run: |
-        scp -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519.pem ./Dockerfile_dev Evan1923@20.55.25.167:/home/Evan1923/say66_dev/
-        ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519.pem Evan1923@20.55.25.167 "
+        scp -i ~/.ssh/id_ed25519.pem ./Dockerfile_dev Evan1923@20.55.25.167:/home/Evan1923/say66_dev/
+        ssh -i ~/.ssh/id_ed25519.pem Evan1923@20.55.25.167 "
           cd /home/Evan1923/say66_dev &&
           mv Dockerfile_dev Dockerfile &&
           docker stop evan || true &&
