fix bugs image not update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,6 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Docker image
-      run: docker build -f Dockerfile_dev -t evan-app .   #123
-
     - name: Set up SSH key
       run: |
         mkdir -p ~/.ssh
@@ -35,12 +32,12 @@ jobs:
 
     - name: Deploy to Azure VM
       run: |
-        scp -i ~/.ssh/id_ed25519.pem ./Dockerfile_dev Evan1923@20.55.25.167:/home/Evan1923/say66_dev/
+        scp -i ~/.ssh/id_ed25519.pem -r ./Dockerfile_dev Evan1923@20.55.25.167:/home/Evan1923/say66_dev/
         ssh -i ~/.ssh/id_ed25519.pem Evan1923@20.55.25.167 "
           cd /home/Evan1923/say66_dev &&
           mv Dockerfile_dev Dockerfile &&
           docker stop evan || true &&
           docker rm evan || true &&
-          docker build -t evan-app . &&
+          docker build --no-cache -t evan-app . &&
           docker run -d -p 5000:5000 --name evan evan-app
         "
