--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
 
     - name: Deploy to Azure VM
       run: |
-        scp -i ~/.ssh/id_ed25519.pem -r ./Dockerfile_dev Evan1923@20.248.241.202:/home/Evan1923/say66_dev/
-        ssh -i ~/.ssh/id_ed25519.pem Evan1923@20.248.241.202 "
-          cd /home/Evan1923/say66_dev &&
+        scp -i ~/.ssh/id_ed25519.pem -r ./Dockerfile_dev evan1923@20.248.241.202:/home/evan1923/say66_dev/
+        ssh -i ~/.ssh/id_ed25519.pem evan1923@20.248.241.202 "
+          cd /home/evan1923/say66_dev &&
           mv Dockerfile_dev Dockerfile &&
           docker stop evan || true &&
           docker rm evan || true &&
