--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,19 @@ jobs:
 
     - name: Deploy to Azure VM
       run: |
-        scp -i ~/.ssh/id_ed25519.pem -r ./Dockerfile_dev evan1923@20.248.241.202:/home/evan1923/say66_dev/
-        ssh -i ~/.ssh/id_ed25519.pem evan1923@20.248.241.202 "
-          cd /home/evan1923/say66_dev &&
-          mv Dockerfile_dev Dockerfile &&
-          docker stop evan || true &&
-          docker rm evan || true &&
-          docker build --no-cache -t evan-app . &&
-          docker run -d -p 5000:5000 --name evan evan-app
-        "
+          # Ensure the remote directory exists before copying
+          ssh -i ~/.ssh/id_ed25519.pem evan1923@20.248.241.202 "mkdir -p /home/evan1923/say66_dev/"
+      
+          # Copy the Dockerfile_dev to the remote server
+          scp -i ~/.ssh/id_ed25519.pem -r ./Dockerfile_dev evan1923@20.248.241.202:/home/evan1923/say66_dev/
+      
+          # SSH into the server and deploy the Docker container
+          ssh -i ~/.ssh/id_ed25519.pem evan1923@20.248.241.202 "
+            cd /home/evan1923/say66_dev &&
+            mv Dockerfile_dev Dockerfile &&
+            docker stop evan || true &&
+            docker rm evan || true &&
+            docker build --no-cache -t evan-app . &&
+            docker run -d -p 5000:5000 --name evan evan-app
+          "
+      
